--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack": "^5.75.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.4",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
@@ -38,7 +39,11 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.3.1",
+    "jest-cli": "^29.3.1",
+    "jsdom": "^20.0.3",
     "prettier": "^2.8.1",
+    "ts-jest": "^29.0.3",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
   }
