--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack/webpack.config.js --env env=dev"
+    "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
+    "json-server": "json-server --watch db.json",
+    "test:components": "jest --watch --config=jest.config.ts --testPathPattern=__tests__/components",
+    "test:services": "jest --watch --testPathPattern=__tests__/services"
   },
   "repository": {
     "type": "git",
@@ -23,12 +26,16 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "babel-loader": "^9.1.0",
+    "gsap": "^3.11.4",
     "html-webpack-plugin": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.1",
     "webpack": "^5.75.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.2.4",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
@@ -41,9 +48,12 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.3.1",
     "jest-cli": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "jsdom": "^20.0.3",
+    "json-server": "^0.17.1",
     "prettier": "^2.8.1",
     "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
   }
